# kvadrat

./: .gitignore  .npmignore  README.md  asconfig.json  bench.ts  eslint.config.ts  package-lock.json  package.json  perf.md  pyproject.toml  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: gh-pages.yaml  publish.yaml  release.yaml
assembly/: index.ts
examples/: README.md
examples/00/: 00.xcf
kvadrat/: __init__.py  __main__.py  bitmap.py  constants.py  polygon.py  svg.py  svg_.py  util.py
poc/: layered-decompose.mjs
scripts/: measure-rects.mjs  tsconfig.json  version.js  version.ts
src/: cli.ts  color-hex.test.ts  color-hex.ts  index.test.ts  index.ts  index.visual.test.ts  measure-time.ts  worker-pool.ts  worker.test.ts  worker.ts
test/: index.test.ts  index.visual.test.ts  output-bg.css  output-bg.html  output-layered-bg-linear-gradient.css  output-layered-bg-linear-gradient.html  output-layered-bg-svg.html  tsconfig.json
tests/: __init__.py
wasm/: Makefile  bindings.cpp  core.c  core.h
